--- a/pages/plan-course.html
+++ b/pages/plan-course.html
@@ -53,7 +53,7 @@
     /* Add scrollbar for course details */
     #courseDetails {
       display: none;
-      max-height: 500px; /* Adjust as needed */
+      max-height: 500px;
       overflow-y: auto;
       border: 1px solid #ddd;
       padding: 10px;
@@ -65,6 +65,9 @@
       border: 1px solid #28a745;
       background-color: #d4edda;
       color: #155724;
+    }
+    .json-content td {
+      white-space: pre-wrap;
     }
   </style>
 </head>
@@ -105,6 +108,8 @@
         <!-- notification -->
         <div id="notification">計劃已成功保存並清空表格。</div>
       </div>
+
+      <!-- Right side table for scheduling courses -->
       <div class="content-sidebar">
         <div class="form-group">
           <label for="titleSelect">Select Title:</label>
@@ -121,7 +126,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
-    // JavaScript to dynamically load menu bar
+    // load menu bar
     fetch('menu.html')
       .then(response => response.text())
       .then(data => {
@@ -153,7 +158,7 @@
         fetch('../database/courses.json')
           .then(response => response.json())
           .then(courses => {
-            courseDetailsContainer.innerHTML = ''; // 清除之前的內容
+            courseDetailsContainer.innerHTML = ''; // clear previous course detail
             const relatedCourses = courses.filter(course => course.title === selectedTitle);
             if (relatedCourses.length > 0) {
               relatedCourses.forEach(course => {
@@ -165,11 +170,10 @@
                 courseElement.innerHTML = `
                   <h5>${course.title}</h5>
                   <p><strong>Topic:</strong> ${course.topic}</p>
-                  <p><strong>Content:</strong> ${course.content}</p>
+                  <p><strong>Content:</strong> ${course.content.replace(/\n/g, '<br>')}</p>
                   <p><strong>Duration:</strong> ${course.duration} minutes</p>
                   <p><strong>Presenters:</strong> ${course.presenter.join(', ')}</p>
                 `;
-
                 courseDetailsContainer.appendChild(courseElement);
               });
             } else {
@@ -179,7 +183,7 @@
           .catch(error => console.error('Error fetching courses:', error));
       } else {
         courseDetailsContainer.style.display = 'none';
-        courseDetailsContainer.innerHTML = ''; // 清除之前的內容
+        courseDetailsContainer.innerHTML = '';
       }
     });
 
@@ -208,7 +212,7 @@
           <td>${fromTime}</td>
           <td>${toTime}</td>
           <td>${course.topic}</td>
-          <td>${course.content}</td>
+          <td>${course.content.replace(/\n/g, '<br>')}</td>
           <td>${course.presenter.join(', ')}</td>
         `;
 
