--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -40,6 +40,9 @@
     td {
       white-space: pre-wrap; /* Preserve white spaces and line breaks */
     }
+    .download-btn {
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -59,6 +62,9 @@
     <div id="schedule-container">
       <!-- Schedule will be populated by JavaScript -->
     </div>
+
+    <!-- 下載按鈕 -->
+    <button id="downloadPdfBtn" class="btn btn-success download-btn" onclick="downloadPdf()">下載 PDF</button>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -66,6 +72,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/locales/bootstrap-datepicker.zh-TW.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script> <!-- 引入 jsPDF 庫 -->
 
   <script>
     // 日期選擇器設置
@@ -125,7 +133,7 @@
       return [year, (month.length < 2 ? '0' : '') + month, (day.length < 2 ? '0' : '') + day].join('-');
     }
 
-    // 生成表格 HTML 字符串
+    // 生成表格 HTML 字符串，保留換行符
     function createTableHTML(data) {
       let tableHTML = `
         <table>
@@ -146,7 +154,7 @@
             <td>${row.from}</td>
             <td>${row.to}</td>
             <td>${row.topics}</td>
-            <td>${row.content}</td>
+            <td>${row.content.replace(/\n/g, '<br>')}</td>
             <td>${row.presenter}</td>
           </tr>
         `;
@@ -154,6 +162,36 @@
       tableHTML += `</tbody></table>`;
       return tableHTML;
     }
+
+    // 下載日程表為 PDF 文件
+    async function downloadPdf() {
+      const { jsPDF } = window.jspdf;
+      const pdf = new jsPDF('p', 'pt', 'a4');
+      const tables = document.querySelectorAll('#schedule-container .json-content');
+
+      for (let i = 0; i < tables.length; i++) {
+        const table = tables[i];
+        const canvas = await html2canvas(table);
+
+        // 添加圖像到 PDF
+        const imgData = canvas.toDataURL('image/png');
+        const imgProps = pdf.getImageProperties(imgData);
+        const pdfWidth = pdf.internal.pageSize.getWidth();
+        const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
+
+        if (i > 0) {
+          pdf.addPage();
+        }
+
+        pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
+      }
+
+      const filename = prompt('請輸入文件名稱:', 'schedule');
+      if (filename) {
+        pdf.save(`${filename}.pdf`);
+      }
+    }
+    
     // JavaScript to dynamically load menu bar
     fetch('menu.html')
       .then(response => response.text())
@@ -161,7 +199,6 @@
         document.getElementById('menu-bar').innerHTML = data;
       })
       .catch(error => console.error('Error loading menu:', error));
-
   </script>
 </body>
 </html>
