Add edit button

--- a/pages/plan-course.html
+++ b/pages/plan-course.html
@@ -105,6 +105,10 @@
         <div id="saveButtonContainer">
           <button id="saveButton" class="btn btn-success">Save</button>
         </div>
+        <div>
+          <br>
+          <a href="json-editor.html" class="btn btn-info" role="button">Edit Existing Plan</a>
+        </div>
         <!-- notification -->
         <div id="notification">計劃已成功保存並清空表格。</div>
       </div>
