--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -6,43 +6,16 @@
   <title>Syllabus</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
-
   <style>
-    .day {
-      margin: 10px 0;
-      font-size: 18px;
-    }
-    .import-btn {
-      margin-left: 10px;
-    }
-    .file-input {
-      display: none;
-    }
-    .json-content {
-      margin-top: 10px;
-      border: 1px solid #ddd;
-      padding: 10px;
-      background-color: #f9f9f9;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 20px;
-    }
-    th, td {
-      border: 1px solid #dddddd;
-      text-align: center;
-      padding: 8px;
-    }
-    th {
-      background-color: #f2f2f2;
-    }
-    td {
-      white-space: pre-wrap; /* Preserve white spaces and line breaks */
-    }
-    .download-btn {
-      margin-top: 20px;
-    }
+    .day { margin: 10px 0; font-size: 18px; }
+    .import-btn { margin-left: 10px; }
+    .file-input { display: none; }
+    .json-content { margin-top: 10px; border: 1px solid #ddd; padding: 10px; background-color: #f9f9f9; }
+    table { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
+    th, td { border: 1px solid #dddddd; text-align: center; padding: 8px; }
+    th { background-color: #f2f2f2; }
+    td { white-space: pre-wrap; }
+    .download-btn { margin-top: 20px; }
   </style>
 </head>
 <body>
@@ -64,141 +37,155 @@
     </div>
 
     <!-- 下載按鈕 -->
-    <button id="downloadPdfBtn" class="btn btn-success download-btn" onclick="downloadPdf()">下載 PDF</button>
+    <button id="downloadPdfBtn" class="btn btn-success download-btn">下載 PDF</button>
   </div>
 
+  <!-- 引入腳本 -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/locales/bootstrap-datepicker.zh-TW.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script> <!-- 引入 jsPDF 庫 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.14/jspdf.plugin.autotable.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vxe-table-plugin-export-pdf/fonts/source-han-sans-normal.js"></script>
 
   <script>
-    // 日期選擇器設置
-    $('#datepicker').datepicker({
-      format: 'yyyy-mm-dd',
-      language: 'zh-TW',
-      multidate: true,
-      multidateSeparator: ',',
-      todayHighlight: true
-    });
+    window.addEventListener('load', () => {
+      const { jsPDF } = window.jspdf;
 
-    // 生成日程表
-    document.getElementById('generateScheduleBtn').addEventListener('click', function() {
-      const selectedDates = $('#datepicker').datepicker('getDates').map(formatDate);
-      const scheduleContainer = document.getElementById('schedule-container');
-      scheduleContainer.innerHTML = ''; // 清空之前的日程表
+      function downloadPdf() {
+        const pdf = new jsPDF('p', 'pt', 'a4');
+        pdf.addFont('SourceHanSans-Normal.ttf', 'SourceHanSans-Normal', 'normal');
+        pdf.setFont('SourceHanSans-Normal');
+        pdf.text(20, 20, '繁體中文日程表');
 
-      selectedDates.forEach((date, index) => {
-        const dayElement = document.createElement('div');
-        dayElement.classList.add('day');
-        dayElement.innerHTML = `
-          <span>Day ${index + 1}: ${date}</span>
-          <button class="btn btn-secondary import-btn">+</button>
-          <input type="file" class="file-input" accept=".json">
-          <div class="json-content"></div>
-        `;
-        scheduleContainer.appendChild(dayElement);
+        const tables = document.querySelectorAll('#schedule-container .json-content table');
+        tables.forEach((table, index) => {
+          const rows = Array.from(table.querySelectorAll('tr')).map(tr => {
+            return Array.from(tr.querySelectorAll('td, th')).map(td => td.innerText);
+          });
+          const header = rows.shift();
+          
+          pdf.autoTable({
+            head: [header],
+            body: rows,
+            startY: index === 0 ? 60 : pdf.autoTable.previous.finalY + 10,
+            // 確保表格使用自定義字體
+            styles: {
+              font: 'SourceHanSans-Normal',
+              fontStyle: 'normal'
+            }
+          });
 
-        // 添加匯入按鈕事件
-        const importBtn = dayElement.querySelector('.import-btn');
-        const fileInput = dayElement.querySelector('.file-input');
-        importBtn.addEventListener('click', () => fileInput.click());
-
-        // 處理文件選擇
-        fileInput.addEventListener('change', function(event) {
-          const file = event.target.files[0];
-          if (file) {
-            const reader = new FileReader();
-            reader.onload = function(e) {
-              const content = JSON.parse(e.target.result);
-              const jsonContentDiv = dayElement.querySelector('.json-content');
-              jsonContentDiv.innerHTML = createTableHTML(content);
-            };
-            reader.readAsText(file);
+          if (index > 0) {
+            pdf.addPage();
           }
         });
-      });
-    });
 
-    // 格式化日期為 yyyy-mm-dd
-    function formatDate(date) {
-      const d = new Date(date);
-      const month = '' + (d.getMonth() + 1);
-      const day = '' + d.getDate();
-      const year = d.getFullYear();
-
-      return [year, (month.length < 2 ? '0' : '') + month, (day.length < 2 ? '0' : '') + day].join('-');
-    }
-
-    // 生成表格 HTML 字符串，保留換行符
-    function createTableHTML(data) {
-      let tableHTML = `
-        <table>
-          <thead>
-            <tr>
-              <th>From</th>
-              <th>To</th>
-              <th>Topics</th>
-              <th>Content</th>
-              <th>Presenter</th>
-            </tr>
-          </thead>
-          <tbody>
-      `;
-      data.forEach(row => {
-        tableHTML += `
-          <tr>
-            <td>${row.from}</td>
-            <td>${row.to}</td>
-            <td>${row.topics}</td>
-            <td>${row.content.replace(/\n/g, '<br>')}</td>
-            <td>${row.presenter}</td>
-          </tr>
-        `;
-      });
-      tableHTML += `</tbody></table>`;
-      return tableHTML;
-    }
-
-    // 下載日程表為 PDF 文件
-    async function downloadPdf() {
-      const { jsPDF } = window.jspdf;
-      const pdf = new jsPDF('p', 'pt', 'a4');
-      const tables = document.querySelectorAll('#schedule-container .json-content');
-
-      for (let i = 0; i < tables.length; i++) {
-        const table = tables[i];
-        const canvas = await html2canvas(table);
-
-        // 添加圖像到 PDF
-        const imgData = canvas.toDataURL('image/png');
-        const imgProps = pdf.getImageProperties(imgData);
-        const pdfWidth = pdf.internal.pageSize.getWidth();
-        const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
-
-        if (i > 0) {
-          pdf.addPage();
+        const filename = prompt('請輸入文件名稱:', 'schedule');
+        if (filename) {
+          pdf.save(`${filename}.pdf`);
         }
-
-        pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
       }
 
-      const filename = prompt('請輸入文件名稱:', 'schedule');
-      if (filename) {
-        pdf.save(`${filename}.pdf`);
+      // 綁定點擊事件
+      document.getElementById('downloadPdfBtn').addEventListener('click', downloadPdf);
+
+      // 日期選擇器設置
+      $('#datepicker').datepicker({
+        format: 'yyyy-mm-dd',
+        language: 'zh-TW',
+        multidate: true,
+        multidateSeparator: ',',
+        todayHighlight: true
+      });
+
+      // 生成日程表
+      document.getElementById('generateScheduleBtn').addEventListener('click', function() {
+        const selectedDates = $('#datepicker').datepicker('getDates').map(formatDate);
+        const scheduleContainer = document.getElementById('schedule-container');
+        scheduleContainer.innerHTML = '';
+
+        selectedDates.forEach((date, index) => {
+          const dayElement = document.createElement('div');
+          dayElement.classList.add('day');
+          dayElement.innerHTML = `
+            <span>Day ${index + 1}: ${date}</span>
+            <button class="btn btn-secondary import-btn">+</button>
+            <input type="file" class="file-input" accept=".json">
+            <div class="json-content"></div>
+          `;
+          scheduleContainer.appendChild(dayElement);
+
+          const importBtn = dayElement.querySelector('.import-btn');
+          const fileInput = dayElement.querySelector('.file-input');
+          importBtn.addEventListener('click', () => fileInput.click());
+
+          fileInput.addEventListener('change', function(event) {
+            const file = event.target.files[0];
+            if (file) {
+              const reader = new FileReader();
+              reader.onload = function(e) {
+                const content = JSON.parse(e.target.result);
+                const jsonContentDiv = dayElement.querySelector('.json-content');
+                jsonContentDiv.innerHTML = createTableHTML(content);
+              };
+              reader.readAsText(file);
+            }
+          });
+        });
+      });
+
+      // 格式化日期為 yyyy-mm-dd
+      function formatDate(date) {
+        const d = new Date(date);
+        const month = '' + (d.getMonth() + 1);
+        const day = '' + d.getDate();
+        const year = d.getFullYear();
+
+        return [year, (month.length < 2 ? '0' : '') + month, (day.length < 2 ? '0' : '') + day].join('-');
       }
-    }
-    
-    // JavaScript to dynamically load menu bar
-    fetch('menu.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('menu-bar').innerHTML = data;
-      })
-      .catch(error => console.error('Error loading menu:', error));
+
+      // 生成表格 HTML 字符串，保留換行符
+      function createTableHTML(data) {
+        let tableHTML = `
+          <table>
+            <thead>
+              <tr>
+                <th>From</th>
+                <th>To</th>
+                <th>Topics</th>
+                <th>Content</th>
+                <th>Presenter</th>
+              </tr>
+            </thead>
+            <tbody>
+        `;
+        data.forEach(row => {
+          tableHTML += `
+            <tr>
+              <td>${row.from}</td>
+              <td>${row.to}</td>
+              <td>${row.topics}</td>
+              <td>${row.content.replace(/\n/g, '<br>')}</td>
+              <td>${row.presenter}</td>
+            </tr>
+          `;
+        });
+        tableHTML += `</tbody></table>`;
+        return tableHTML;
+      }
+
+      // JavaScript to dynamically load menu bar
+      fetch('menu.html')
+        .then(response => response.text())
+        .then(data => {
+          document.getElementById('menu-bar').innerHTML = data;
+        })
+        .catch(error => console.error('Error loading menu:', error));
+    });
   </script>
 </body>
 </html>
