--- a/pages/planner.html
+++ b/pages/planner.html
@@ -143,15 +143,19 @@
 
       // 生成日程表
       document.getElementById('generateScheduleBtn').addEventListener('click', function() {
-        const selectedDates = $('#datepicker').datepicker('getDates').map(formatDate);
+        const selectedDates = $('#datepicker').datepicker('getDates');
         const scheduleContainer = document.getElementById('schedule-container');
         scheduleContainer.innerHTML = '';
 
+        // 按照日期排序
+        selectedDates.sort((a, b) => a - b);
+
         selectedDates.forEach((date, index) => {
+          const formattedDate = formatDate(date);
           const dayElement = document.createElement('div');
           dayElement.classList.add('day');
           dayElement.innerHTML = `
-            <div class="day-info">Day ${index + 1}: ${date}</div>
+            <div class="day-info">Day ${index + 1}: ${formattedDate}</div>
             <input type="text" class="form-control table-title-input" placeholder="輸入標題">
             <div class="json-content dropzone">
               <table>
