--- a/pages/planner.html
+++ b/pages/planner.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Combined Planner</title>
+  <title>Planner</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
   <style>
@@ -38,9 +38,9 @@
   <div id="menu-bar"></div>
 
   <div class="container mt-4">
-    <h1>Combined Planner</h1>
+    <h1>Planner</h1>
 
-    <!-- 日期選擇器 -->
+    <!-- date picker -->
     <div class="form-group">
       <label for="datepicker">選擇日期:</label>
       <input type="text" id="datepicker" class="form-control" placeholder="選擇日期範圍">
