--- a/pages/menu.html
+++ b/pages/menu.html
@@ -7,10 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/pages/schedule.html">Schedule</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/plan-course.html">Plan</a>
+          <a class="nav-link" href="/pages/planner.html">Planner</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/all-courses.html">Courses</a>
