--- a/pages/add-presenter.html
+++ b/pages/add-presenter.html
@@ -17,6 +17,8 @@
         <input type="text" class="form-control" id="presenterName" name="presenterName" required>
       </div>
       <button type="submit" class="btn btn-primary">Add Presenter</button>
+      <button type="button" class="btn btn-secondary" id="clearButton">Clear</button>
+      <button type="button" class="btn btn-secondary" id="backButton">Go Back</button>
     </form>
   </div>
 
@@ -47,6 +49,14 @@
         console.error('Error:', error);
         alert('Failed to add presenter. Please try again.');
       });
+    });
+
+    document.getElementById('clearButton').addEventListener('click', function() {
+      document.getElementById('addPresenterForm').reset();
+    });
+
+    document.getElementById('backButton').addEventListener('click', function() {
+      window.history.back();
     });
   </script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
