Rename API endpoint

--- a/pages/add-title.html
+++ b/pages/add-title.html
@@ -28,7 +28,7 @@
 
       const courseTitle = document.getElementById('courseTitle').value;
 
-      fetch('/add-course', {
+      fetch('/add-title', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
